
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 int atoi (char*) ;
 int comein (char*) ;
 int connlink (char*,char*) ;
 int createdir (char*) ;
 int printf (char*,...) ;

int main(int argc,char *argv[]){

  int level;
 FILE *fp;

 if(argc==2) {
  level=atoi(argv[1]);
 }else{
  level=512;
 }
 createdir("C");
 createdir("C/C");

 connlink("C/C","CX");

 comein("C");

 while(level--)
   printf("Level: %i mkdir:%i chdir:%i\n",level,
   createdir("C"),
   comein("C"));


 printf("check diskutil verifyVolume /\n");
 return 0;
}
